fix: add missing color variables

--- a/styles/planet-minecraft/catppuccin.user.css
+++ b/styles/planet-minecraft/catppuccin.user.css
@@ -46,6 +46,8 @@
 			--stat-color: @catppuccin[@@lookup][@red];
 			--a-color: @catppuccin[@@lookup][@@accent];
 			--a-hover: @catppuccin[@@lookup][@@accent];
+			--a-selected: fade(@catppuccin[@@lookup][@@accent], 80%);
+			--tab-hover: fade(@catppuccin[@@lookup][@@accent], 80%);
 			--tab-color: @catppuccin[@@lookup][@subtext0];
 			--nav-color: @catppuccin[@@lookup][@text];
 			--widget-wrap-bg: @catppuccin[@@lookup][@mantle];
@@ -59,6 +61,12 @@
 			--border-color-light: @catppuccin[@@lookup][@surface0];
 			--site-border-color: @catppuccin[@@lookup][@surface0];
 			--graphic-bg: @catppuccin[@@lookup][@surface0];
+			--notice-bg: @catppuccin[@@lookup][@overlay0];
+			--notice-color: @catppuccin[@@lookup][@text];
+			--menu-disabled-color: @catppuccin[@@lookup][@crust];
+			--control-bg: @catppuccin[@@lookup][@@accent];
+			--a-visited: @catppuccin[@@lookup][@@accent];
+			--nav-bar-border: none;
 		}
 
 		.tab_options > ul > li.currentpage,
